k8s/services/external/app/frigate/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: frigate
  labels:
    kubernetes.io/service-name: frigate
addressType: FQDN
ports:
  - name: http
    protocol: TCP
    port: 5000
endpoints:
  - addresses:
      - recorder.bar.risson.net
    conditions: {}
