k8s/services/external/app/frigate/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: frigate
  hostnames:
    - cctv.phemma.fr
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: frigate
          port: 5000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: frigate
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: frigate
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/frigate/
    clientID: frigate
    clientSecret:
      name: frigate-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
